# Proyecto-deslizamiento

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/controllers/: classification.py
app/api/v1/routers/: classification.py  models.py
app/config/: settings.py
app/services/: ml_inference.py
notebooks/: 00_dataload.ipynb  01_download_preprocess_images.ipynb  02_statistical_classifier.ipynb  03_knn_classifier.ipynb  04_pixel_based_classifier.ipynb  05_random_forest_classifier.ipynb
scripts/: download_samples.py
tests/: conftest.py  utils.py
tests/integration/: test_api.py
tests/unit/: test_ml_inference.py
